# 2026imagine

./: .gitignore  README.md
pictures/: 0325_window01.xcf  0325_window02.xcf  0325_window03.xcf  0325_window04.xcf  0325_window05.xcf  window06.xcf  window1.xcf  window2.xcf  window_default.xcf
project/: CMakeLists.txt
project/include/: .#trimmer.h  assemble.h  dectool.h  dectool.h~  hextool.h  hextool.h~  lexer.h  menu.h  source_reader.h  token.h  token.h~  trimmer.h  vect_writer.h
project/src/: main.cpp
project/src/assemble/: .#source_reader.cpp  assemble.cpp  assemble.cpp~  dectool.cpp  dectool.cpp~  hextool.cpp  hextool.cpp~  source_reader.cpp  source_reader.cpp~  trimmer.cpp  vect_writer.cpp  vect_writer.cpp~
project/src/compiler/: token.cpp  token.cpp~
project/src/compiler/lexer/: lexer.cpp
